[BTWCT-1029] - fixed scrolling on ios (only when needed)

--- a/waters-aem-frontend/src/styles/header.scss
+++ b/waters-aem-frontend/src/styles/header.scss
@@ -236,8 +236,17 @@
         }
     }
 
-    &__navigation{
-        @include mobile {
+    @include mobile {
+
+        html.noscroll &__navigation{
+            height: 100%;
+            height: -moz-available;
+            height: -webkit-fill-available; 
+            height: fill-available;
+            overflow-y: auto;
+        }
+
+        &__navigation{
             transition: $fade-transition;
             opacity: 0;
             display: none;
@@ -245,19 +254,20 @@
             .container{
                 padding: 0;
             }
-        }
-    }
 
-    
-    &__navigation.is-active{
-        @include mobile {
-            opacity: 1;
-            display: block;
+            &.is-active {
+                opacity: 1;
+                display: block;
+            }
         }
     }
 }
 
 @include mobile {
+    html.noscroll,
+    html.noscroll body{
+        overflow: hidden;
+    }
     .cmp-header.is-fixed {
         position: fixed;
         height: 100%;
